--- a/firebase.json
+++ b/firebase.json
@@ -5,7 +5,7 @@
     "rewrites": [
       {
         "source": "**",
-        "function": "ssr"
+        "destination": "/index.html"
       }
     ]
   }
