--- a/firebase.json
+++ b/firebase.json
@@ -1,12 +1,10 @@
 {
   "hosting": {
     "public": "dist/atomicgains/browser",
-    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
     ]
   }
 }
